# pico-w-webserver-example

./: .gitignore  CMakeLists.txt  README.md  build.sh
.github/workflows/: build.yml
cmake/: FindMAKEFSDATA.cmake  utils.cmake
src/: .gitignore  CMakeLists.txt  access_point.cpp  access_point.h  cgi.cpp  cgi.h  double_reset_detector.cpp  double_reset_detector.h  http_server.cpp  http_server.h  lwipopts.h  main.cpp  makefsdata.py  network_utils.cpp  network_utils.h  ssi.cpp  ssi.h
src/fs/: index.html  ssi.shtml  ssi_cgi.shtml
